{
  "version": 4,
  "terraform_version": "1.3.7",
  "serial": 180,
  "lineage": "6e5f345e-33e5-8a8c-0015-b100af3417c4",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "jenkins-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:016471897565:security-group/sg-0def4cbf55548ff44",
            "description": "Allow ssh inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0def4cbf55548ff44",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "jenkins access to public",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "ssh access to public",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "jenkins-sg",
            "name_prefix": "",
            "owner_id": "016471897565",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0c68190e1a448dd45"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks_cluster_infra.aws_vpc.devops_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "node",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:016471897565:security-group/sg-03feeaa7ffdebb390",
            "description": "Allow ssh inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-03feeaa7ffdebb390",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "ssh access to public",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "vlx2-eks-node-sg",
            "name_prefix": "",
            "owner_id": "016471897565",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0c68190e1a448dd45"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks_cluster_infra.aws_vpc.devops_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.eks_cluster_infra",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "devops_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:016471897565:internet-gateway/igw-0947574ab3b8e0067",
            "id": "igw-0947574ab3b8e0067",
            "owner_id": "016471897565",
            "tags": {
              "Name": "krm-devops_vpc_igw"
            },
            "tags_all": {
              "Name": "krm-devops_vpc_igw"
            },
            "vpc_id": "vpc-0c68190e1a448dd45"
          },
          "dependencies": [
            "module.eks_cluster_infra.aws_vpc.devops_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.eks_cluster_infra",
      "mode": "managed",
      "type": "aws_route",
      "name": "pub_routes",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0947574ab3b8e0067",
            "id": "r-rtb-0f9901bb2c35944b71080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0f9901bb2c35944b7",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks_cluster_infra.aws_internet_gateway.devops_igw",
            "module.eks_cluster_infra.aws_route_table.pub_rtr_1",
            "module.eks_cluster_infra.aws_vpc.devops_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.eks_cluster_infra",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "pub_rtr_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:016471897565:route-table/rtb-0f9901bb2c35944b7",
            "id": "rtb-0f9901bb2c35944b7",
            "owner_id": "016471897565",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "vlx2-eks-public-routing-table"
            },
            "tags_all": {
              "Name": "vlx2-eks-public-routing-table"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c68190e1a448dd45"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks_cluster_infra.aws_vpc.devops_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.eks_cluster_infra",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "pub-sub_1-assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01bc5c100430f14c3",
            "route_table_id": "rtb-0f9901bb2c35944b7",
            "subnet_id": "subnet-01e859fc7accd92d6"
          },
          "dependencies": [
            "module.eks_cluster_infra.aws_route_table.pub_rtr_1",
            "module.eks_cluster_infra.aws_subnet.pub_subnet_1",
            "module.eks_cluster_infra.aws_vpc.devops_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.eks_cluster_infra",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "pub-sub_2-assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0fa1155c02664301c",
            "route_table_id": "rtb-0f9901bb2c35944b7",
            "subnet_id": "subnet-0c3e989767b3ef9ac"
          },
          "dependencies": [
            "module.eks_cluster_infra.aws_route_table.pub_rtr_1",
            "module.eks_cluster_infra.aws_subnet.pub_subnet_2",
            "module.eks_cluster_infra.aws_vpc.devops_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.eks_cluster_infra",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "pub_subnet_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:016471897565:subnet/subnet-01e859fc7accd92d6",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.1.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01e859fc7accd92d6",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "016471897565",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public-sub-1"
            },
            "tags_all": {
              "Name": "public-sub-1"
            },
            "vpc_id": "vpc-0c68190e1a448dd45"
          },
          "dependencies": [
            "module.eks_cluster_infra.aws_vpc.devops_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.eks_cluster_infra",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "pub_subnet_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:016471897565:subnet/subnet-0c3e989767b3ef9ac",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.1.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c3e989767b3ef9ac",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "016471897565",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public-sub-2"
            },
            "tags_all": {
              "Name": "public-sub-2"
            },
            "vpc_id": "vpc-0c68190e1a448dd45"
          },
          "dependencies": [
            "module.eks_cluster_infra.aws_vpc.devops_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.eks_cluster_infra",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "devops_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:016471897565:vpc/vpc-0c68190e1a448dd45",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.1.0.0/16",
            "default_network_acl_id": "acl-099eb32a5e52baa63",
            "default_route_table_id": "rtb-0ef7b51326dd5f22c",
            "default_security_group_id": "sg-03482f8a403a93776",
            "dhcp_options_id": "dopt-088c96a7cd801a799",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0c68190e1a448dd45",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0ef7b51326dd5f22c",
            "owner_id": "016471897565",
            "tags": {
              "Name": "vlx2-eks"
            },
            "tags_all": {
              "Name": "vlx2-eks"
            }
          }
        }
      ]
    }
  ]
}